packages/main/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CI_PROJECT_NAME-main
  labels:
    maintainer: ${GITLAB_USER_LOGIN}
    app: $CI_PROJECT_NAME-main
spec:
  selector:
    matchLabels:
      app: $CI_PROJECT_NAME-main
  replicas: 1
  template:
    metadata:
      labels:
        maintainer: ${GITLAB_USER_LOGIN}
        app: $CI_PROJECT_NAME-main
    spec:
      containers:
        - name: ${CI_PROJECT_NAME}-main
          image: ${CONTAINER_TAGGED_IMAGE}-main
          ports:
#            - containerPort: ${APP_PORT}
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz/
#              port: ${APP_PORT}
              port: 80
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
      imagePullSecrets:
        - name: harbor
