packages/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}-main-ingress
  labels:
    maintainer: ${GITLAB_USER_LOGIN}
    app: ${CI_PROJECT_NAME}-main
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  rules:
    - host: ${HOST_MAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $CI_PROJECT_NAME-main
                port:
                  number: ${APP_PORT}
#                  number: 80
